--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Meomory</title>
+    <script src="./script.js"></script>
+    <link rel="stylesheet"  href=".\styles.css">
+
 </head>
 
 <body>
-    <table id="table">
-        
-    </table>
+<div id="tablero">
+</div>
 
-    <script src="./script.js"></script>
+<br>
+
+<div class="nuevo-juego" onclick="generarTablero()">Nuevo Juego</div>
 </body>
 
 </html>
