--- a/index.html
+++ b/index.html
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Memory</title>
+    <script src="./script.js"></script>
+    <link rel="stylesheet"  href=".\styles.css">
+
 </head>
 
-<body>
-    <table id="table">
-        
-    </table>
+<h1>Memory Game</h1>
+<h2>Player 1</h2>
+<input id='player1Counter' type="number" value="0">
+<h2>Player 2</h2>
+<input id='player2Counter' type="number" value="0">
+<div id="board">
+</div>
 
-    <script src="./script.js"></script>
+<br>
+<div  id:'new-game'>
+    New-Game
+    <input  type="button" onclick="location.reload()">
+</div>
 </body>
 
 </html>
