'solve merge conflic'

--- a/index.html
+++ b/index.html
@@ -9,16 +9,19 @@
   </head>
 
   <body>
-    <h2>Player 1</h2>
-    <input id="player1Counter" type="number" value="0" />
-    <h2>Player 2</h2>
-    <input id="player2Counter" type="number" value="0" />
+    <div>
+      <h2>Player 1</h2>
+      <input id="player1Counter" type="number" value="0" />
+      <h2>Player 2</h2>
+      <input id="player2Counter" type="number" value="0" />
+    </div>
+
     <div id="tablero"></div>
 
     <br />
 
     <div class="nuevo-juego" onclick="generarTablero()">Nuevo Juego</div>
 
-    <script src="./script.js"></script>
+    <script src="./DisplayScript.js"></script>
   </body>
 </html>
