--- a/index.html
+++ b/index.html
@@ -1,23 +1,34 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meomory</title>
-    <script src="./script.js"></script>
-    <link rel="stylesheet"  href=".\styles.css">
-
+    <title>Memory Game</title>
+    <link rel="stylesheet" href="./styles.css">
+    
 </head>
-
-<body>
-<div id="tablero">
-</div>
+<body class="page">
+    <div class="header">
+        <h1>Memory Game</h1>
+    </div>
+    <div class="sidebar">
+        <h2>Player 1</h2>
+        <input id='player1Counter' type="number" value="0">
+        <h2>Player 2</h2>
+        <input id='player2Counter' type="number" value="0">
+    </div>
+    <div id="board" class="container">
         
-<br>
+    </div>
+    <br>
+    <div id="new-game" class="footer">
+        <input type="button" Value="New-Game" onclick="location.reload()">
+    </div>
 
-<div class="nuevo-juego" onclick="generarTablero()">Nuevo Juego</div>
+    <script src="./DisplayScript.js"></script>  <!--//defer load the script when the page loads.-->
 </body>
 
-</html>
+</html
