--- a/index.html
+++ b/index.html
@@ -14,14 +14,22 @@
     <div class="header">
         <h1>Memory Game</h1>
     </div>
-    <div class="sidebar">
-        <h2>Player 1</h2>
-        <input id='player1Counter' type="number" value="0">
-        <h2>Player 2</h2>
-        <input id='player2Counter' type="number" value="0">
-        <h3>Player</h3>
-        <input id="playerTurn" type="number" value="1">
-        <h3>turn</h3>
+    <div class="game-info">
+        <div class="players" >
+            <div class="score">
+                <h2>player 1</h2>
+                <input id='player1Counter' class="counter" type="number" value="0">
+            </div>
+            <div class="score">
+                <h2>player 2</h2>
+                <input id='player2Counter' class="counter" type="number" value="0">
+            </div>
+        </div>
+        <div class="turn-counter">
+            <h3>player</h3> 
+            <input id="playerTurn" class="counter" type="number" value="1">
+            <h3>turn</h3>
+        </div>
 
     </div>
     <div id="board" class="container">
