add grid size setting @ init

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
     <br>
     <div id="new-game" class="footer">
-        <input type="button" Value="New-Game" onclick="location.reload()">
+        <input type="button" value="" id="newGame" >
     </div>
 
     <script src="./DisplayScript.js"></script>
